--- a/index.html
+++ b/index.html
@@ -26,8 +26,46 @@
       </div>
 
       <div id="questions" class="hide">
+<!-- Question 1-->
         <h2 id="question-title"></h2>
-        <div id="choices" class="choices"></div>
+        <div id="choices" class="choices">
+          <button></button>
+          <button></button>
+          <button></button>
+          <button></button>
+        </div>
+<!-- Question 2-->
+        <h2 id="question-title"></h2>
+        <div id="choices" class="choices">
+          <button></button>
+          <button></button>
+          <button></button>
+          <button></button>
+        </div>
+<!-- Question 3-->
+        <h2 id="question-title"></h2>
+        <div id="choices" class="choices">
+          <button></button>
+          <button></button>
+          <button></button>
+          <button></button>
+        </div>
+<!-- Question 4-->
+        <h2 id="question-title"></h2>
+        <div id="choices" class="choices">
+          <button></button>
+          <button></button>
+          <button></button>
+          <button></button>
+        </div>
+<!-- Question 5-->
+        <h2 id="question-title"></h2>
+        <div id="choices" class="choices">
+          <button></button>
+          <button></button>
+          <button></button>
+          <button></button>
+        </div>
       </div>
 
       <div id="end-screen" class="hide">
