--- a/index.html
+++ b/index.html
@@ -27,44 +27,44 @@
 
       <div id="questions" class="hide">
 <!-- Question 1-->
-        <h2 id="question-title"></h2>
-        <div id="choices" class="choices">
-          <button></button>
-          <button></button>
-          <button></button>
-          <button></button>
+        <h2 id="question-one" class="question-title"> Commonly used data types DO NOT include: </h2>
+        <div id="choiceOne" class="choices">
+          <button> 1. strings </button>
+          <button> 2. booleans </button>
+          <button> 3. numbers </button>
+          <button> 4. alerts </button>
         </div>
 <!-- Question 2-->
-        <h2 id="question-title"></h2>
-        <div id="choices" class="choices">
-          <button></button>
-          <button></button>
-          <button></button>
-          <button></button>
+        <h2  id="question-two" class="question-title"> The condition in an if/else statement is enclosed within _____. </h2>
+        <div id="choiceTwo" class="choices">
+          <button> 1. quotes </button>
+          <button> 2. curly brackets </button>
+          <button> 3. parentheses </button>
+          <button> 4. square brackets </button>
         </div>
 <!-- Question 3-->
-        <h2 id="question-title"></h2>
-        <div id="choices" class="choices">
-          <button></button>
-          <button></button>
-          <button></button>
-          <button></button>
+        <h2 id="question-three" class="question-title"> Arrays in JavaScript can be used to store____.  </h2>
+        <div id="choiceThree" class="choices">
+          <button> 1. numbers and strings </button>
+          <button> 2. other arrays </button>
+          <button> 3. booleans </button>
+          <button> 4. all of the above </button>
         </div>
 <!-- Question 4-->
-        <h2 id="question-title"></h2>
-        <div id="choices" class="choices">
-          <button></button>
-          <button></button>
-          <button></button>
-          <button></button>
+        <h2 id="question-four" class="question-title"> String values must be enclosed within ____ when being assigned to variables.</h2>
+        <div id="choiceFour" class="choices">
+          <button> 1. commas </button>
+          <button> 2. curly brackets </button>
+          <button> 3. quotes </button>
+          <button> 4. parentheses </button>
         </div>
 <!-- Question 5-->
-        <h2 id="question-title"></h2>
-        <div id="choices" class="choices">
-          <button></button>
-          <button></button>
-          <button></button>
-          <button></button>
+        <h2 id="question-five" class="question-title"> A very useful tool used during development and debugging for printing content to the debugger is:  </h2>
+        <div id="choiceFive" class="choices">
+          <button> 1. JavaScript </button>
+          <button> 2. terminal/bash </button>
+          <button> 3. for loops </button>
+          <button> 4. console.log </button>
         </div>
       </div>
 
@@ -79,8 +79,7 @@
 
       <div id="feedback" class="feedback hide"></div>
     </div>
-
-    <script src="./assets/js/questions.js"></script>
-    <script src="./assets/js/logic.js"></script>
+    
+    <script src="./assets/js/script.js"></script>
   </body>
 </html>
